# CaptureMoment

./: .gitignore  CMakeLists.txt  CMakePresets.json  CaptureMoment.vcxproj  README.md  vcpkg-configuration.json  vcpkg.json  vcpkg_ci.json
cmake/: BuildOptimization.cmake  (+3 more)
core/: CMakeLists.txt
core/common/: types.h
core/include/: core_initialization.h  i_source_manager.h  image_pipeline.h  pch.h  pipeline._engine.h  pixel_format.h  types.h
core/include/common/: common.h  image_region.h  pixel_format.h  types.h
core/include/common/error_handling/: core_error.h
core/include/common/types/: image_types.h  memory_type.h
core/include/config/: app_config.h
core/include/domain/: domain.h  i_processing_backend.h  i_processing_task.h
core/include/engine/: engine.h  photo_engine.h  photo_task.h  pipeline_engine.h
core/include/image_config/: heic_settings.h  image_config.h  raw_settings.h
core/include/image_processing/: image_processing.h  working_image_context.h
core/include/image_processing/common/: working_image_data.h
core/include/image_processing/cpu/: working_image_cpu.h  working_image_cpu_default.h  working_image_cpu_halide.h
core/include/image_processing/deciders/: benchmarking_backend_decider.h
core/include/image_processing/factories/: working_image_factory.h
core/include/image_processing/gpu/: working_image_gpu_halide.h
core/include/image_processing/halide/: working_image_halide.h
core/include/image_processing/interfaces/: i_backend_decider.h  i_working_image_hardware.h
core/include/image_processing/registration/: working_image_registration.h
core/include/managers/: i_source_manager.h  managers.h  source_manager.h  state_image_manager.h
core/include/operations/: brightness_operation.h  i_operation.h  operation_blacks.h  operation_brightness.h  operation_contrast.h  operation_descriptor.h  operation_factory.h  operation_highlights.h  operation_pipeline.h  operation_ranges.h  operation_registry.h  operation_shadows.h  operation_type.h  operation_whites.h  operations.h
core/include/operations/basic_adjustment_operations/: operation_blacks.h  operation_brightness.h  operation_contrast.h  operation_highlights.h  operation_shadows.h  operation_whites.h
core/include/operations/interfaces/: i_operation.h  i_operation_default_logic.h  i_operation_fusion_logic.h
core/include/pipeline/: fallback_pipeline_executor.h  operation_pipeline_builder.h  operation_pipeline_executor.h  pipeline.h  pipeline_builder.h  pipeline_context.h  pipeline_registry.h  pipeline_type.h
core/include/pipeline/interfaces/: i_halide_pipeline_executor.h  i_pipeline_executor.h
core/include/serializer/: exiv2_initializer.h  exiv2_provider.h  file_serializer_manager.h  file_serializer_reader.h  file_serializer_writer.h  i_file_serializer_reader.h  i_file_serializer_writer.h  i_xmp_provider.h  operation_serialization.h  serializer.h
core/include/serializer/provider/: exiv2_initializer.h  exiv2_provider.h  i_xmp_provider.h
core/include/serializer/strategy/: appdata_xmp_path_strategy.h  configurable_xmp_path_strategy.h  i_xmp_path_strategy.h  sidecar_xmp_path_strategy.h
core/include/strategies/: strategies.h
core/include/strategies/pipeline/: pipeline_halide_operation_manager.h
core/include/utils/: color_space_utils.h  image_conversion.h  to_string_utils.h  utils.h
core/include/workers/: worker_builder.h  worker_context.h  worker_registry.h  worker_type.h  workers.h
core/include/workers/halide/: halide_operation_worker.h
core/include/workers/interfaces/: i_worker_request.h
core/src/: core_initialization.cpp  image_pipeline.cpp  image_region.cpp  source_manager.cpp
core/src/config/: app_config.cpp
core/src/engine/: photo_engine.cpp  photo_task.cpp  pipeline_engine.cpp
core/src/image_processing/: working_image_context.cpp
core/src/image_processing/common/: working_image_data.cpp
core/src/image_processing/cpu/: working_image_cpu.cpp  working_image_cpu_default.cpp  working_image_cpu_halide.cpp
core/src/image_processing/deciders/: benchmarking_backend_decider.cpp
core/src/image_processing/factories/: working_image_factory.cpp
core/src/image_processing/gpu/: working_image_gpu_halide.cpp
core/src/image_processing/halide/: image_working_halide.cpp  working_image_halide.cpp
core/src/image_processing/registration/: working_image_registration.cpp
core/src/managers/: source_manager.cpp  state_image_manager.cpp
core/src/operations/: brightness_operation.cpp  operation_blacks.cpp  operation_brightness.cpp  operation_constrast.cpp  operation_factory.cpp  operation_highlights.cpp  operation_pipeline.cpp  operation_registry.cpp  operation_shadows.cpp  operation_whites.cpp
core/src/operations/basic_adjustment_operations/: operation_blacks.cpp  operation_brightness.cpp  operation_constrast.cpp  operation_highlights.cpp  operation_shadows.cpp  operation_whites.cpp
core/src/pipeline/: fallback_pipeline_executor.cpp  operation_pipeline_builder.cpp  operation_pipeline_executor.cpp  pipeline_builder.cpp  pipeline_context.cpp  pipeline_registry.cpp
core/src/serializer/: exiv2_initializer.cpp  file_serializer_manager.cpp  file_serializer_reader.cpp  file_serializer_writer.cpp  operation_serialization.cpp
core/src/serializer/provider/: exiv2_initializer.cpp  exiv2_provider.cpp
core/src/serializer/strategy/: appdata_xmp_path_strategy.cpp  configurable_xmp_path_strategy.cpp  sidecar_xmp_path_strategy.cpp
core/src/strategies/pipeline/: pipeline_halide_operation_manager.cpp
core/src/utils/: color_space_utils.cpp  image_conversion.cpp
core/src/workers/: worker_builder.cpp  worker_context.cpp  worker_registry.cpp
core/src/workers/halide/: halide_operation_worker.cpp
examples/: CMakeLists.txt  basic_brightness.cpp
qt/core/: CMakeLists.txt
qt/core/include/: image_controller.h  image_controller_base.h  image_controller_painted.h
qt/core/src/: image_controller.cpp  image_controller_base.cpp  image_controller_painted.cpp
qt/desktop/: CMakeLists.txt  main.cpp  qtquickcontrols2.conf
qt/desktop/resources/: shaders.qrc
qt/desktop/src/: main.cpp
(+135 files in other folders)
