# qt/desktop/CMakeLists.txt

project(CaptureMomentUIDesktop LANGUAGES CXX)

message(STATUS "Configuring CaptureMoment Desktop UI...")
find_package(Qt6 REQUIRED COMPONENTS Qml)

# We have already packages installed with qt/core/CMakeLists.txt

if(TARGET Qt6::Qml)
    message(STATUS "Qt6 found: ${Qt6_VERSION} (Qml)")
else()
    message(FATAL_ERROR "Qt6 Qml not found. Please install Qt6 with the component.")
endif()
 
qt_standard_project_setup(REQUIRES 6.9.3)

set(CAPTUREMOMENT_DESKTOP_TARGET capturemoment_desktop)

qt_add_executable(${CAPTUREMOMENT_DESKTOP_TARGET})

set_target_properties(${CAPTUREMOMENT_DESKTOP_TARGET} PROPERTIES
    AUTOMOC TRUE
    AUTORCC TRUE
    AUTOUIC TRUE
)

qt_add_resources(${CAPTUREMOMENT_DESKTOP_TARGET} "config"
    PREFIX /
    FILES
       qtquickcontrols2.conf
)

set(QOBJECT_HEADERS
    include/utils/qml_context_setup.h

    # Rendering QML
    include/rendering/qml_rhi_image_item.h
    include/rendering/qml_sgs_image_item.h
    include/rendering/qml_painted_image_item.h    
)

set(CORE_SOURCES
       src/main.cpp
       src/utils/qml_context_setup.cpp

       # Rendering QML
       src/rendering/qml_rhi_image_item.cpp
       src/rendering/qml_sgs_image_item.cpp
       src/rendering/qml_painted_image_item.cpp
)

set(CORE_HEADERS
        /utils/qml_context_setup.h

        # Rendering QML
        /rendering/qml_rhi_image_item.h
        /rendering/qml_sgs_image_item.h
        /rendering/qml_painted_image_item.h
)

set (QML_FILE
    # main
    qml/CaptureMoment/DesktopMain.qml

    # Views
    qml/CaptureMoment/views/EditorView.qml

    # Layout
    qml/CaptureMoment/layout/PanelManager.qml
    qml/CaptureMoment/layout/LeftPanel.qml
    qml/CaptureMoment/layout/CenterPanel.qml
    qml/CaptureMoment/layout/RightPanel.qml
    qml/CaptureMoment/layout/BottomPanel.qml
    qml/CaptureMoment/layout/TopPanel.qml

    # Controls
    qml/CaptureMoment/controls/DropdownControl.qml
    qml/CaptureMoment/controls/SliderControl.qml

    # Operations
    qml/CaptureMoment/operations/BrightnessOperation.qml

    # Panels
    qml/CaptureMoment/panels/OperationsView.qml
    qml/CaptureMoment/panels/TonePanel.qml
    qml/CaptureMoment/panels/base/CollapsiblePanel.qml
    qml/CaptureMoment/panels/base/PanelHeader.qml

    # Menu
    qml/CaptureMoment/app/AppMenuBar.qml

    # Display
    qml/CaptureMoment/display/DisplayArea.qml
    
    # Styles
    qml/CaptureMoment/styles/Icons.qml
)

set (RESSOURCE_FILE
        
)
qt_add_qml_module(${CAPTUREMOMENT_DESKTOP_TARGET}
    URI CaptureMoment.desktop
    VERSION 1.0
    QML_FILES
       ${QML_FILE}
       ${RESSOURCE_FILE}
)
target_sources(${CAPTUREMOMENT_DESKTOP_TARGET}
    PRIVATE
       ${CORE_SOURCES}
       ${QOBJECT_HEADERS}

    PUBLIC
        FILE_SET HEADERS
        BASE_DIRS include
            ${CORE_HEADERS}
)

# Autogenerated bundle properties for macOS and iOS.
# Qt for iOS sets MACOSX_BUNDLE_GUI_IDENTIFIER automatically since Qt 6.1.
# If you are developing for iOS or macOS you should consider setting an
# explicit, fixed bundle identifier manually though.
set_target_properties(${CAPTUREMOMENT_DESKTOP_TARGET} PROPERTIES
    MACOSX_BUNDLE_GUI_IDENTIFIER org.capturerepo.desktop
    MACOSX_BUNDLE_BUNDLE_VERSION ${PROJECT_VERSION}
    MACOSX_BUNDLE_SHORT_VERSION_STRING ${PROJECT_VERSION_MAJOR} #.${PROJECT_VERSION_MINOR} is not working
    MACOSX_BUNDLE TRUE
    WIN32_EXECUTABLE TRUE
)

target_link_libraries(${CAPTUREMOMENT_DESKTOP_TARGET}
    PRIVATE
        capturemoment_qt_core_lib
)

include(GNUInstallDirs)
install(TARGETS capturemoment_desktop
    BUNDLE DESTINATION .
    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
)

message(STATUS "CaptureMoment Desktop UI configured successfully.")
message(STATUS "   - Target: ${CAPTUREMOMENT_DESKTOP_TARGET}")
message(STATUS "   - Qt Version: ${Qt6_VERSION}")
message(STATUS "   - Qt Preferred Version: 6.9.3")
message(STATUS "   - QML URI: CaptureMoment.desktop")
message(STATUS "")
